<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_size_5dp">

    <TextView
        android:id="@+id/goods_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goods_share"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black_1"
        android:gravity="center"
        android:padding="@dimen/margin_size_5dp"
        android:drawableStart="@drawable/goods_share"/>
    <TextView
        android:id="@+id/goods_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goods_search"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black_1"
        android:drawableStart="@drawable/goods_search"
        android:gravity="center"
        android:padding="@dimen/margin_size_5dp"/>
    <TextView
        android:id="@+id/goods_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goods_home"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black_1"
        android:gravity="center"
        android:drawableStart="@drawable/goods_home"
        android:padding="@dimen/margin_size_5dp"/>
</LinearLayout>