<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_size_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"
            android:layout_centerInParent="true" />
        <TextView
            android:id="@+id/car_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/car_edit_false"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <View
        android:id="@+id/car_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_1dp"
        android:background="@color/black_1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/car_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/car_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scrollbars="none"/>

                <LinearLayout
                    android:id="@+id/car_check_all"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_size_50dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <CheckBox
                        android:id="@+id/car_check_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/margin_size_5dp"
                        android:button="@null"
                        android:drawableStart="@drawable/car_check_button"
                        android:drawablePadding="@dimen/margin_size_10dp"
                        android:padding="@dimen/margin_size_10dp"
                        android:text="@string/car_check_text"
                        android:textSize="@dimen/text_size_18sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/car_money_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_18sp"
                        android:gravity="center"
                        android:layout_weight="2"/>

                    <TextView
                        android:id="@+id/car_money"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/car_money"
                        android:textSize="@dimen/text_size_18sp"
                        android:textColor="@color/red"
                        android:gravity="start"
                        android:layout_weight="3"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@color/red"
                        android:text="@string/car_check_out"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_18sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/car_delete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_size_50dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/car_check_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/margin_size_5dp"
                        android:button="@null"
                        android:drawableStart="@drawable/car_check_button"
                        android:drawablePadding="@dimen/margin_size_10dp"
                        android:padding="@dimen/margin_size_10dp"
                        android:text="@string/car_check_text"
                        android:textSize="@dimen/text_size_18sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="@dimen/margin_size_50dp"/>

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_size_40dp"
                        android:layout_weight="2"
                        android:text="@string/btn_delete"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_18sp"
                        android:background="@drawable/btn_background_shape"
                        android:layout_marginEnd="@dimen/margin_size_40dp"/>

                    <Button
                        android:id="@+id/btn_collection"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_size_40dp"
                        android:layout_weight="2"
                        android:text="@string/btn_collection"
                        android:textSize="@dimen/text_size_18sp"
                        android:textColor="@color/black"
                        android:background="@drawable/btn_background_shape"
                        android:layout_marginEnd="@dimen/margin_size_20dp"/>
                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/car_data_empty"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>