<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_size_20dp"
    android:background="@drawable/welcome_background_1">
    <TextView
        android:id="@+id/welcome_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_skip"
        android:textColor="@color/black_1"
        android:textSize="@dimen/text_size_18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/welcome_skip"
        android:alpha="0.5"/>
    <ImageView
        android:id="@+id/welcome_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_size_80dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/welcome_date_linear"
        android:background="@drawable/welcome_logo"
        android:layout_marginBottom="@dimen/margin_size_10dp"/>
    <LinearLayout
        android:id="@+id/welcome_date_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_size_50dp"
        android:gravity="center">
        <TextView
            android:id="@+id/welcome_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_name"
            android:textSize="@dimen/text_size_24sp"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/margin_size_10dp"/>
        <TextView
            android:id="@+id/welcome_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_version"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/black"/>
    </LinearLayout>
</RelativeLayout>