<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_size_10dp">
        <ImageView
            android:id="@+id/goods_back"
            android:layout_width="@dimen/margin_size_30dp"
            android:layout_height="@dimen/margin_size_30dp"
            android:background="@drawable/goods_back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_size_30dp"
            android:text="@string/goods_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/goods_more"
            android:layout_width="@dimen/margin_size_30dp"
            android:layout_height="@dimen/margin_size_30dp"
            android:background="@drawable/goods_more"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_1dp"
        android:background="@color/black_1"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_size_5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/goods_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_18sp"/>
                </LinearLayout>

            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_60dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom">
            <TextView
                android:id="@+id/goods_service"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/goods_service"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/black_1"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_size_5dp"
                android:drawableTop="@drawable/goods_service"
                android:layout_weight="2"
                android:gravity="center"/>

            <TextView
                android:id="@+id/goods_collect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/goods_collect"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/black_1"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_size_5dp"
                android:drawableTop="@drawable/goods_collect"
                android:layout_weight="2"
                android:gravity="center"/>

            <TextView
                android:id="@+id/goods_car"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/goods_car"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/black_1"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_size_5dp"
                android:drawableTop="@drawable/goods_car"
                android:layout_weight="2"
                android:gravity="center"/>

            <TextView
                android:id="@+id/goods_join"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/goods_join"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@color/red"
                android:layout_weight="3"
                android:gravity="center"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>








